source/tests/errors/function_expects_arguments.apex
function foo(a)
    return 0

foo(1, 2)